Bug 700564: Tweak to fix shared libjpeg

A custom header include wasn't protected by proprocessor directives.

And remove one not required inclusion.